# MDO2022_S

./: noweklucze  noweklucze.pub  sprawozdanie.txt
AC401177/Lab01/: sprawozdanie.txt
AC403771/Lab01/: sprawozdanie.txt
AC403771/Lab02/: sprawozdanie.txt
AF400832/Lab01/: sprawozdanie.txt
AH306444/Lab01/: sprawozdanie.txt
AP401673/lab02/: sprawozdanie.md  sprawozdanie.txt
BB401928/Lab01/: sprawozdanie.txt
BB401928/Lab02/: sprawozdanie.txt
BR404123/Lab01/: Sprawozdanie.md
BT403177/Lab01/: sprawozdanie.md
BT403177/Lab02/: sprawozdanie.md  test
DB400735/Lab01/: sprawozdanie.txt
DB400735/Lab02/: sprawozdanie.txt
DB402381/Lab01/: sprawozdanie.txt
DK306669/Lab01/: sprawozdanie.md
ITE/GCL07/MS401869/Lab03/program/project_test/: CMakeLists.txt  CMakeLists_copy.txt  hello_test.cc  main.c
ITE/GCL07/MS401869/Lab03/program/project_test/include/: alg.h
ITE/GCL07/MS401869/Lab03/program/project_test/src/: alg.c
JB404156/: sprawozdanie.txt
Lab01/: Sprawozdanie.txt  lab01.txt
Lab_instructions/: Lab00_zasady_organizacyjne.txt  Lab01_Git.txt  Lab02_Git_2.txt  Lab03_Git_3.txt  Lab04.txt  Lab05.txt  Lab06_pipeline_plan.txt  Lab07.txt  Lab08.txt  Lab09-Kubernetes.txt  Lab10-Kubernetes.txt  Lab11-Kubernetes.txt  Lab12.txt
MD404241/: Lab01
READMEs/: 01-Assignment.md  02-Assignment.md  03-Assignment.md  04-Assignment.md  09-Assignment.md  10-Assignment.md  11-Assignment  11-Assignment.md  12-Assignment.md  13-Assignment.md
SG404037/: Sprawozdanie-nr-1-1.md  Sprawozdanie-nr-1-2.md  Sprawozdanie-nr-1.md  sprawozdanie.md
WR403038/: sprawozdanie.md
(+2165 files in other folders)
